tests/tests/legacy_kustomizations/kfserving-install/test_data/expected/admissionregistration.k8s.io_v1beta1_validatingwebhookconfiguration_inferenceservice.serving.kubeflow.org.yaml
apiVersion: admissionregistration.k8s.io/v1beta1
kind: ValidatingWebhookConfiguration
metadata:
  annotations:
    cert-manager.io/inject-ca-from: kfserving-system/serving-cert
  creationTimestamp: null
  labels:
    app.kubernetes.io/component: kfserving-install
    app.kubernetes.io/instance: kfserving-install
    app.kubernetes.io/managed-by: kfctl
    app.kubernetes.io/name: kfserving-install
    app.kubernetes.io/part-of: kubeflow
    app.kubernetes.io/version: v0.3.0
    kustomize.component: kfserving
  name: inferenceservice.serving.kubeflow.org
  namespace: kfserving-system
webhooks:
- clientConfig:
    caBundle: Cg==
    service:
      name: kfserving-webhook-server-service
      namespace: kubeflow
      path: /validate-inferenceservices
  failurePolicy: Fail
  name: inferenceservice.kfserving-webhook-server.validator
  rules:
  - apiGroups:
    - serving.kubeflow.org
    apiVersions:
    - v1alpha2
    operations:
    - CREATE
    - UPDATE
    resources:
    - inferenceservices
