tests/tests/legacy_kustomizations/kfserving-install/test_data/expected/~g_v1_namespace_kfserving-system.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    app.kubernetes.io/component: kfserving-install
    app.kubernetes.io/instance: kfserving-install
    app.kubernetes.io/managed-by: kfctl
    app.kubernetes.io/name: kfserving-install
    app.kubernetes.io/part-of: kubeflow
    app.kubernetes.io/version: v0.3.0
    control-plane: kfserving-controller-manager
    controller-tools.k8s.io: "1.0"
    istio-injection: disabled
    kustomize.component: kfserving
  name: kfserving-system
