tests/tests/legacy_kustomizations/kfserving-install/test_data/expected/~g_v1_service_kfserving-controller-manager-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: kfserving-install
    app.kubernetes.io/instance: kfserving-install-0.2.2
    app.kubernetes.io/managed-by: kfctl
    app.kubernetes.io/name: kfserving-install
    app.kubernetes.io/part-of: kubeflow
    app.kubernetes.io/version: 0.2.2
    control-plane: kfserving-controller-manager
    controller-tools.k8s.io: "1.0"
    kustomize.component: kfserving
  name: kfserving-controller-manager-service
  namespace: kubeflow
spec:
  ports:
  - port: 443
  selector:
    app.kubernetes.io/component: kfserving-install
    app.kubernetes.io/instance: kfserving-install-0.2.2
    app.kubernetes.io/managed-by: kfctl
    app.kubernetes.io/name: kfserving-install
    app.kubernetes.io/part-of: kubeflow
    app.kubernetes.io/version: 0.2.2
    control-plane: kfserving-controller-manager
    controller-tools.k8s.io: "1.0"
    kustomize.component: kfserving
